# compositions

./: .gitignore  .vimrc  .vimrc.lua  README.md
computer_music/shared/: runTests.scd
computer_music/shared/Classes/: CompositionOne.sc  P3Call.sc  P3CallAndResponse.sc  P3Options.sc  P3Response.sc  Pulsar.sc
computer_music/shared/Tests/: TestP3Call.sc  TestP3CallAndResponse.sc
computer_music/spring/final_project/: main.scd  synths.scd
computer_music/spring/project_04_poem/: main.scd  misc.scd  patterns.scd  synths.scd
computer_music/spring/project_05/: main.scd  patterns.scd  synths.scd
computer_music/spring/project_06/: main.scd  patterns.scd  synths.scd
computer_music/spring/project_07/: main.scd  misc.scd
computer_music/winter/final/: main.scd
computer_music/winter/project_01/: main.sc  main.scd
computer_music/winter/project_03/: main.scd
rust/: .envrc  shell.nix
rust/composition/: Cargo.toml
rust/composition/src/: lib.rs  main.rs  osc.rs
rust/composition/src/actors/: cont.rs  ding.rs  messenger.rs  mod.rs  receiver.rs  scsynth.rs  sequencer.rs
rust/composition/src/messages/: blah.rs  cont.rs  ding.rs  mod.rs  pierce.rs
rust/delux_proto/: Cargo.toml  build.rs
rust/delux_proto/proto/: sequencer.proto
rust/delux_proto/src/: lib.rs
rust/sequences/: Cargo.toml
rust/sequences/src/: debugging.rs  lib.rs  main.rs
rust/spring_final/: Cargo.toml
rust/spring_final/src/: main.rs  osc.rs
rust/spring_final/src/actors/: blah.rs  cont.rs  ding.rs  mod.rs  pierce.rs
sc/: .envrc  shell.nix
sc/composition/: load.scd  main.scd  misc.scd  osc.scd  patterns.scd  synths.scd
sc/lib/: misc.scd  start_server.scd
sc/lib/synths/: Epic_Pad_Example.scd  PMCrotale.scd  Record Scratcher.scd  _Possible Lethal Weapons.scd  apad_mh.scd  babblingbrook_jmc.scd  bass.scd  bassSimple.scd  bd.scd  beating.scd  blips.scd  blowbot1.scd  bowed.scd  cheappiano.scd  clap_oto309.scd  closedhat.scd  cs80lead_mh.scd  cymbal808_ryan.scd  cymbalic_mcld.scd  defaultB.scd  drum_kick.scd  drumkit1.scd  everythingrhodes.scd  fatvelocitybass.scd  flute.scd  forest_bird_pj.scd  (+57 more)
sc/spring_final/: main.scd  misc.scd  osc.scd  patterns.scd  synths.scd
(+21 files in other folders)
