[package]
name = "sequencer"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
delux_proto = { path = "../delux_proto" }

axum = "0.7"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10" }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
