[package]
name = "final_composition"
version = "0.1.0"
authors = ["parker couch <code@parkercouch.dev>"]
edition = "2018"

[dependencies]
async-osc = "0.2"
async-std = { version = "1.9", features = [ "attributes" ] }
async-trait = "0.1"
anyhow = "1.0"
futures = { version = "0.3", features = [  ] }
structopt = "0.3"
xactor = "0.7"

mobc = { version = "0.7", features = ["async-std"] }

derive_more = "0.99"
derive-new = "0.5"
